update file routes

--- a/assets/scss/_card.scss
+++ b/assets/scss/_card.scss
@@ -14,7 +14,7 @@
     height: 45px;
     border-radius: 50%;
     background-color: $dark_blue;
-    background-image: url("/assets/images/svg/icon-star.svg");
+    background-image: url("../images/svg/icon-star.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 35%;
