--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,7 +39,7 @@ body {
   height: 45px;
   border-radius: 50%;
   background-color: #252d37;
-  background-image: url("/assets/images/svg/icon-star.svg");
+  background-image: url("../images/svg/icon-star.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 35%;
